force-app/main/default/objects/sixsense__X6sense_Lead_Scores__c/sixsense__X6sense_Lead_Scores__c.object-meta.xml
<CustomObject>
    <description>Custom object to capture Lead Scores for existing 6sense Leads.</description>
    <label>6sense Lead Score</label>
    <nameField>
        <label>Product Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>6sense Lead Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>