force-app/main/default/objects/sixsense__X6sense_Lead_Scores__c/fields/sixsense__Company_ID__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Company_ID__c</fullName>
    <label>Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>