force-app/main/default/objects/sixsense__X6sense_Lead_Scores__c/fields/sixsense__CompanyIntentScore__c.field-meta.xml
<CustomField>
    <fullName>sixsense__CompanyIntentScore__c</fullName>
    <label>Company Intent Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>