force-app/main/default/objects/sixsense__X6sense_Lead_Scores__c/fields/sixsense__grade__c.field-meta.xml
<CustomField>
    <fullName>sixsense__grade__c</fullName>
    <label>Grade</label>
    <length>2</length>
    <type>Text</type>
</CustomField>