force-app/main/default/objects/sixsense__X6sense_Lead_Scores__c/fields/sixsense__lead_id__c.field-meta.xml
<CustomField>
    <fullName>sixsense__lead_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>6sense Predictive Intelligence - Leads</relationshipLabel>
    <relationshipName>X6sense_Lead_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>