force-app/main/default/objects/sixsense__X6sense_Lead_Scores__c/fields/sixsense__LeadProductKey__c.field-meta.xml
<CustomField>
    <fullName>sixsense__LeadProductKey__c</fullName>
    <description>Concatenation of Lead ID and Product Key separated by an underscore</description>
    <externalId>true</externalId>
    <inlineHelpText>Concatenation of Lead ID and Product Key separated by an underscore</inlineHelpText>
    <label>LeadProductKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>