force-app/main/default/objects/sixsense__X6sense_Lead_Scores__c/fields/sixsense__profile_fit__c.field-meta.xml
<CustomField>
    <fullName>sixsense__profile_fit__c</fullName>
    <label>Profile Fit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>