force-app/main/default/objects/sixsense__X6sense_Lead_Scores__c/fields/sixsense__QueuedForProcessing__c.field-meta.xml
<CustomField>
    <fullName>sixsense__QueuedForProcessing__c</fullName>
    <externalId>true</externalId>
    <label>Queued For Processing</label>
    <length>20</length>
    <type>Text</type>
</CustomField>